--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@rails/webpacker": "^3.2.2",
     "bootstrap": "3",
+    "flatpickr": "^4.3.2",
     "gmaps": "^0.4.24",
     "jquery": "^3.3.1",
     "rails-ujs": "^5.1.5",
