--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "flatpickr": "^4.3.2",
     "gmaps": "^0.4.24",
     "jquery": "^3.3.1",
+    "mapbox-gl": "^0.44.1",
     "rails-ujs": "^5.1.5",
     "really-smooth-scroll": "^2.1.1",
     "slick-carousel": "^1.8.1"
