--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -11,7 +11,7 @@ default: &default
   resolved_paths: ['app/assets']
 
   # Reload manifest.json on all requests so we reload latest compiled packs
-  cache_manifest: true
+  cache_manifest: false
 
   extensions:
     - .js
