--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
     "jquery": "^3.3.1",
     "mapbox-gl": "^0.44.1",
     "rails-ujs": "^5.1.5",
-    "really-smooth-scroll": "^2.1.1",
-    "slick-carousel": "^1.8.1"
+    "really-smooth-scroll": "^2.1.1"
   },
   "devDependencies": {
-    "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^2.11.1"
   }
 }
